--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #86af8c;
+  background-color: #ffdcb1;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,56 +13,92 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.headerContainer {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  width: 20em;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.headerDiv {
+  background-color: aqua;
+}
+
+.firstHeader {
+  /* background-color: rgb(255, 130, 46); */
+  margin: none;
+  color: rgb(255, 110, 178);
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  width: 15em;
+  height: 2em;
+  font-size: larger;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  border-style: none;
+  padding: 5px 5px 5px 15px;
+  color: rgb(255, 110, 178);
+}
+
+.addButton {
+  background-color: rgb(248, 93, 165);
+  width: 10em;
+  height: 3em;
+  font-size: larger;
+  color: white;
+}
+
+.secondHeader {
+  margin: 2em 0 15px 0;
+  color: rgb(255, 110, 178);
+}
+
+.petContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.petDiv {
+  width: 18em;
+  background-color: rgb(252, 140, 192);
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px 0 20px 0;
+}
+
+.petName {
+  font-weight: bolder;
+  font-size: larger;
+  margin: 5px;
+}
+
+.petAge {
+  margin: 5px;
+}
+
+.petSpecies {
+  margin: 5px;
+}
+
+.trashButton {
+  border-radius: 10px;
+  background-color: rgb(248, 93, 165);
+  padding: 5px 5px 3px 5px;
+  margin-top: 10px;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  border-radius: 10px;
+  border: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
